<resources>
    <string name="app_name">SeaDemo</string>

    <string name="login_hint">connecting&#8230;</string>
    <string name="start_wifi">请开启wifi</string>
    <string name="connect_failed">自动连接失败，请手动连接</string>
    <string name="take_picture">拍照</string>
    <string name="sender_label">串口数据接收:</string>
    <string name="sender_clear">清除</string>
    <string name="sender_send">"发送</string>
    <string name="sender_switch">串口</string>

    <string name="fullscreen">全屏</string>
    <string name="pictures">照片</string>
    <string name="standard">标准</string>
    <string name="setting">设置</string>
    <string name="record_video">录像</string>
    <string name="exit_title">MJPEG视频流</string>
    <string name="exit_hint">确定要退出？</string>
    <string name="exit_btn_yes">是</string>
    <string name="exit_btn_no">否</string>
    <string name="ip">Ip:</string>
    <string name="port">Port:</string>
    <string name="ip_hint">请输入Ip地址</string>
    <string name="port_hint">端口1000到65535</string>
    <string name="connect">链接</string>
    <string name="send_hint">请输入要发送的内容</string>
</resources>
